bug 968456. Put Music App Behind a Scrollable Layer

--- a/apps/music/style/music.css
+++ b/apps/music/style/music.css
@@ -323,6 +323,16 @@ body.picker-mode #title-player {
   min-height: 100%;
 }
 
+/*
+ * Bug 968456 - Ensure background
+ * scrolls w/ the content
+ */
+#views-tiles-anchor,
+#views-list-anchor,
+#views-sublist-anchor > li.list-item {
+  background-color: #0E1214;
+}
+
 #views-sublist-header,
 #views-sublist-anchor {
   position: relative;
